# dataset-parallel-inference

./: .gitignore  core.py  dataset_statistics.py  dataset_statistics_README.md  main.py  pyproject.toml
projects/check_language/: task.py
projects/example/: task.py
projects/example_2/: task.py
projects/example_3/: task.py
projects/example_3_chat/: model.py  task.py
projects/example_3_follow/: task.py
projects/example_3_medical/: model.py  task.py
projects/example_3_science/: task.py
projects/example_3_writing/: task.py
projects/glm47/: task.py
projects/regenerate_answer/: task.py
projects/rubric_if_define_field/: instruction_arg_extractor.py  task.py
projects/rubric_if_define_field/functions/: AdjacentLetterChecker.py  BiGramWrappingChecker.py  BulletListChecker.py  CapitalLettersEnglishChecker.py  CapitalWordFrequencyChecker.py  CommaChecker.py  ConstrainedResponseChecker.py  ConstrainedStartChecker.py  CopyChecker.py  CopySpanIdxChecker.py  CopyingMultipleChecker.py  CopyingSimpleChecker.py  CountIncrementWordChecker.py  CountUniqueChecker.py  CountingCompositionChecker.py  EndChecker.py  ExcludeWordHarderChecker.py  FirstWordAnswerChecker.py  FirstWordSentChecker.py  ForbiddenWords.py  HighlightSectionChecker.py  Instruction.py  (+36 more)
projects/rubric_if_translate_field/: task.py
projects/rubric_if_translate_field_chat/: task.py
projects/rubric_if_translate_field_follow/: task.py
projects/rubric_if_translate_field_medical/: task.py
projects/rubric_if_translate_field_science/: task.py
projects/rubric_if_translate_field_writing/: task.py
